# internshipwork

ai-project-repo/: .gitignore  POLICIES_INTEGRATION.md  POLICY_SELECTION_FEATURE.md  README.md  SEPARATION_IMPLEMENTATION.md  docker-compose.yml  test.txt
ai-project-repo/backend/: .dockerignore  Dockerfile  anony.py  expected_output_format.py  langgraph.dev.json  langgraph.json  main.py  pyproject.toml  question_bank.md  questions_answers.csv  readme.md  requirements.txt  setup.py  sql_ops.py  test_serialization.py
ai-project-repo/backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
ai-project-repo/backend/langgraph_workflow/: agents.py  config.json  langgraph.json  local_sql_ops.py  models.py  models.txt  test_input.json  test_json_input.py  test_workflow.py  workflow.py
ai-project-repo/backend/langgraph_workflow/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
ai-project-repo/backend/prompts/: job_prompts.py  lab_review_prompts.py
ai-project-repo/backend/questions_api/: Dockerfile  README.md  __init__.py  config.py  dependencies.py  main.py  models.py  requirements.txt  run.py  services.py  sqlops.txt  test_api.py
ai-project-repo/backend/routers/: audit.py  config.py  jobs.py  policies.py  reports.py  transcripts.py
ai-project-repo/backend/workflows/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  simple_workflow.py
ai-tool/: FastApi.md  (+2 more)
ai-tool/mcp_sql/: pyproject.toml  server.py
(+304 files in other folders)
